testsuite/tests/parser/should_fail/pfail015.alan
hello() : proc
  foo : int[10 ;
{
}
