testsuite/tests/parser/should_fail/pfail015.stderr
pfail015.alan:2:16: Error: Parse error on input `;'
	Probably missing `]'

